package pt.ufp.info.esof.lectures.models;

import java.util.ArrayList;
import java.util.List;

public class Aluno extends Utilizador{
    private final List<Explicacao> explicacoes=new ArrayList<>();
}
