package pt.ufp.info.esof.lectures.models;

import java.util.ArrayList;
import java.util.List;

public class Cadeira {
    private String nome;
    private Curso curso;
    private List<Explicador> explicadores=new ArrayList<>();
}
