package pt.ufp.info.esof.lectures.models;

import java.util.ArrayList;
import java.util.List;

public class Curso {
    private String nome;
    private List<Cadeira> cadeiras=new ArrayList<>();
    private Faculdade faculdade;
}
