package pt.ufp.info.esof.lectures.models;

import java.util.ArrayList;
import java.util.List;

public class Faculdade {
    private String nome;
    private List<Curso> cursos=new ArrayList<>();

}
