package pt.ufp.info.esof.lectures.models;

public class Utilizador {
    private String nome;
}
